d-http.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dbg
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debug-http
  namespace: dbg
  labels:
    app: debug-http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: debug-http
  template:
    metadata:
      labels:
        app: debug-http
    spec:
      containers:
      - name: debug-http
        image: ghcr.io/mendhak/http-https-echo:35
        ports:
        - containerPort: 8080
        - containerPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: debug-http
  namespace: dbg
spec:
  selector:
    app: debug-http
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  - name: https
    protocol: TCP
    port: 443
    targetPort: 8443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: debug-http
  namespace: dbg
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - d-http.audacioustux.com
    secretName: d-http-audaciousutx-com-tls
  rules:
  - host: d-http.audacioustux.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: debug-http
            port:
              number: 80
