rook.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
  annotations:
    cert-manager.io/cluster-issuer: selfsigned
spec:
  tls:
   - hosts:
     - rook.audacioustux.com
     secretName: rook-audacioustux-com-tls
  rules:
  - host: rook.audacioustux.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rook-ceph-mgr-dashboard
            port:
              name: http-dashboard
